fixed rep and jpa exc

--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>All Posts</title>
+  <title>Title</title>
 </head>
 <body>
 <header th:replace="partials/navbar"></header>
@@ -10,15 +12,11 @@
 <!-- Include the header partial -->
 <section th:replace="partials/header"></section>
 
-<h1>All Posts</h1>
-<ul>
-  <li th:each="post : ${posts}">
-    <h2 th:text="${post.title}"></h2>
-    <p th:text="${post.body}"></p>
-  </li>
-</ul>
+<h1 th:text="${post.getTitle()}"></h1>
+<h1 th:text="${post.getBody()}"></h1>
 
 <!-- Include the footer partial -->
 <footer th:replace="partials/footer"></footer>
+
 </body>
 </html>
