--- a/src/main/resources/templates/posts/show.html
+++ b/src/main/resources/templates/posts/show.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Show Post</title>
+  <title>Title</title>
 </head>
 <body>
 <header th:replace="partials/navbar"></header>
@@ -10,11 +10,13 @@
 <!-- Include the header partial -->
 <section th:replace="partials/header"></section>
 
-<h1>Show Post</h1>
-<h2 th:text="${post.title}"></h2>
-<p th:text="${post.body}"></p>
+<div th:each="post : ${posts}">
+  <p th:text="${post.getTitle()}" />
+  <p th:text="${post.getBody()}" />
+</div>
 
 <!-- Include the footer partial -->
 <footer th:replace="partials/footer"></footer>
+
 </body>
 </html>
