--- a/src/main/resources/templates/posts/show.html
+++ b/src/main/resources/templates/posts/show.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+
 <head>
-  <meta charset="UTF-8">
-  <title>Title</title>
+  <header th:insert="partials/header :: head"></header>
+  <title>Show Single Post</title>
 </head>
+
 <body>
-<header th:replace="partials/navbar"></header>
+<nav th:replace="partials/navbar :: navbar">
+</nav>
 
-<!-- Include the header partial -->
-<section th:replace="partials/header"></section>
+<div class="container-fluid">
 
-<div th:each="post : ${posts}">
-  <p th:text="${post.getTitle()}" />
-  <p th:text="${post.getBody()}" />
+  <h1 th:text="${post.title}">(insert post title here)</h1>
 
-  <!-- Display the email of the user who created the post -->
-<!--  <p th:text="${post.getUser().getEmail()}" />-->
+  <h6 name="creator-email" id="creator-email" th:text="${post.creator.email}" class="mt-3">(insert creator email here)</h6>
+
+  <h5 name="body" id="body" th:text="${post.body}" class="mt-3">(insert body here)</h5>
+
+
+  <footer th:replace="partials/footer :: footer">
+  </footer>
 
 </div>
-
-<!-- Include the footer partial -->
-<footer th:replace="partials/footer"></footer>
 
 </body>
 </html>
