--- a/src/main/resources/templates/partials/footer.html
+++ b/src/main/resources/templates/partials/footer.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>navbar</title>
 </head>
 <body>
-<footer th:fragment="footer">
-    <p>&copy; 2023 My Website. All rights reserved.</p>
-</footer>
+<div th:fragment="navbar">
+    <footer th:fragment="footer">
+        Tim Varjan &copy; 2023. All rights reserved.
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+        <form th:action="@{/logout}" th:method="post" id="logoutForm">
+        </form>
+        <script>
+            const link = document.querySelector("#logout-link");
+            if(link !== null) {
+                link.addEventListener("click", function (event) {
+                    document.getElementById("logoutForm").submit();
+                });
+            }
+        </script>
+
+    </footer>
+</div>
 </body>
 </html>
