--- a/src/main/resources/templates/partials/navbar.html
+++ b/src/main/resources/templates/partials/navbar.html
@@ -1,21 +1,39 @@
 <!DOCTYPE html>
-<html lang="en" xlms:th="http://www.thymeleaf.org" xmlns:xlms="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.w3.org/1999/xhtml">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
   <meta charset="UTF-8">
   <title>navbar</title>
 </head>
 <body>
 <div th:fragment="navbar">
-  <nav class="navbar navbar-default bg-light mb-3 border">
+  <nav th:fragment="navbar" class="navbar navbar-expand-sm navbar-light bg-light">
     <div class="container-fluid">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="/posts">Spring Blog</a>
+      <a class="navbar-brand" href="/">Spring Blog Project</a>
+      <div id="navbarNav" class="w-100">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a th:classappend="${selectedPage == 'login'} ? active" class="nav-link" href="/login">Login</a>
+          </li>
+          <li sclass="nav-item">
+            <a id="logout-link" class="nav-link" href="#">Logout</a>
+          </li>
+          <li class="nav-item">
+            <a th:classappend="${selectedPage == 'posts'} ? active" class="nav-link" aria-current="page" href="/posts">Posts</a>
+          </li>
+          <li class="nav-item">
+            <a th:classappend="${selectedPage == 'posts-create'} ? active" class="nav-link" href="/posts/create">Create Post</a>
+          </li>
+
+
+
+          <!--          <li sec:authorize="isAuthenticated()" class="ms-auto nav-item">-->
+          <!--            <span class="nav-link disabled" th:text="@{| ${#authentication.principal.username == null ? 'Not logged in' : 'Logged in as ' + #authentication.principal.username} |}">insert logged in user name here</span>-->
+          <!--          </li>-->
+          <li class="nav-item ms-auto">
+            <span class="nav-link disabled" th:text="${loggedInUser.username}">insert logged in user name here</span>
+          </li>
+        </ul>
       </div>
-      <ul class="nav navbar-nav navbar-right navbar-expand">
-        <li class="mr-4"><a href="/posts/create">Create</a></li>
-        <li><a href="/posts">View All Posts</a></li>
-      </ul>
     </div>
   </nav>
 </div>
