--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -1,22 +1,52 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+
 <head>
-  <meta charset="UTF-8">
-  <title>Title</title>
+  <header th:insert="partials/header :: head"></header>
+  <title>All Posts</title>
 </head>
+
 <body>
-<header th:replace="partials/navbar"></header>
+<nav th:replace="partials/navbar :: navbar">
+</nav>
 
-<!-- Include the header partial -->
-<section th:replace="partials/header"></section>
+<div class="container-fluid">
 
-<h1 th:text="${post.getTitle()}"></h1>
-<h1 th:text="${post.getBody()}"></h1>
+  <h1>All Posts</h1>
 
-<!-- Include the footer partial -->
-<footer th:replace="partials/footer"></footer>
+  <!--    <h3 th:if="${myVar}">not null</h3>-->
+
+  <table class="mt-3 table table-striped">
+    <thead>
+    <tr>
+      <th>Title</th>
+      <th>Body</th>
+      <th></th>
+      <th></th>
+    </tr>
+    </thead>
+    <tr th:each="post : ${posts}">
+      <td>
+        <a th:href="@{|/posts/${post.id}|}" th:text="${post.title}"></a>
+      </td>
+      <td th:text="${post.body}"></td>
+      <td>
+        <a th:href="@{|/posts/${post.id}/edit|}">Edit</a>
+      </td>
+      <td>
+        <a th:href="@{|/posts/${post.id}/delete|}">Delete</a>
+      </td>
+      <!--        <td th:if="${userName != post.creator.name}">-->
+      <!--        </td>-->
+      <!--        <td th:if="${userName != post.creator.name}">-->
+      <!--        </td>-->
+    </tr>
+  </table>
+
+  <footer th:replace="partials/footer :: footer">
+  </footer>
+
+</div>
 
 </body>
 </html>
